plugins {
	id 'java'
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
	id "com.diffplug.spotless" version "7.0.0.BETA2"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		url = 'https://maven.parchmentmc.org'
	}
}

loom {
	accessWidenerPath = file("src/main/resources/xenon.accesswidener")
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"

	mappings loom.layered() {
		officialMojangMappings()
		parchment("org.parchmentmc.data:parchment-${minecraft_version}:${parchment_version}@zip")
	}

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation "com.github.spotbugs:spotbugs-annotations:${project.spotbugs_annotations}"
	include(modApi("net.covers1624:Quack:${project.quack_version}"))
	include(modApi("org.joml:joml:${joml_version}"))
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()
	withJavadocJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

spotless {
	java {
		target 'src/*/java/**/*.java'

		removeUnusedImports()
		palantirJavaFormat().formatJavadoc(true)
		formatAnnotations()
	}

	groovyGradle {
		target '*.gradle'

		greclipse()
	}
}
